test/asm/bank.err
ERROR: bank.asm(14) -> bank.asm::def_sect(8):
    Expected constant expression: Section "ROMX_bad"'s bank is not known
ERROR: bank.asm(16) -> bank.asm::def_sect(8):
    Expected constant expression: Section "VRAM_bad"'s bank is not known
ERROR: bank.asm(18) -> bank.asm::def_sect(8):
    Expected constant expression: Section "SRAM_bad"'s bank is not known
ERROR: bank.asm(21) -> bank.asm::def_sect(8):
    Expected constant expression: Section "WRAMX_bad"'s bank is not known
error: Assembly aborted (4 errors)!
